<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="view.ProfileActivity">

    <!-- ScrollView para que el contenido pueda desplazarse si es necesario -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Imagen de perfil -->
            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_account"
                android:contentDescription="@string/profile_image_desc"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp" />

            <!-- Botón para cambiar a Premium o gestionar la suscripción -->
            <Button
                android:id="@+id/button_change_to_premium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cerrarsesion_boton"
                android:text="Cambiar a Premium"
                android:textColor="#000000"
                android:layout_marginBottom="16dp"
                android:enabled="true" />

            <!-- Campo para el nombre -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:background="@color/white"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/edit_text_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:hint="Nombre"
                    android:minHeight="48dp" />

                <ImageButton
                    android:id="@+id/button_edit_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/edit_name"
                    android:padding="8dp"
                    android:src="@drawable/ic_edit"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <!-- Campo para el correo electrónico -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:background="@color/white"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:hint="Correo electrónico"
                    android:minHeight="48dp" />

                <ImageButton
                    android:id="@+id/button_edit_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/edit_email"
                    android:padding="8dp"
                    android:src="@drawable/ic_edit"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <!-- Campo para la contraseña -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:background="@color/white"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:hint="Contraseña"
                    android:inputType="textPassword"
                    android:minHeight="48dp" />

                <ImageButton
                    android:id="@+id/button_edit_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/edit_password"
                    android:padding="8dp"
                    android:src="@drawable/ic_edit"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <!-- Campo para la imagen de perfil -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:background="@color/white"
                android:layout_marginBottom="24dp">

                <EditText
                    android:id="@+id/edit_text_profile_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:hint="Imagen de perfil"
                    android:minHeight="48dp" />

                <ImageButton
                    android:id="@+id/button_edit_profile_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/edit_profile_image"
                    android:padding="8dp"
                    android:src="@drawable/ic_edit"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

            <!-- Botón para guardar -->
            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:text="Guardar"
                android:textColor="#000000"
                android:enabled="true"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/button_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cerrarsesion_boton"
                android:text="Cerrar sesión"
                android:textColor="#000000"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />
        </LinearLayout>
    </ScrollView>

    <!-- Bottom Navigation View -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@color/nav_item_color"
        app:itemTextColor="@color/nav_item_color" />
</LinearLayout>
